loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:6: error: ';' expected but 'if' found.
  }if nbbisc >2 {
   ^Poucet1:11: error: 'while' expected but '}' found.
	}
        ^